--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer" role="contentinfo">
     <small>
-        <a href="https://github.com/ronv/ultra/">© 2019 Ultra</a>.
+        <a href="https://github.com/ronv/ultra/">© 2019 Ultra</a>
     </small>
 </footer>
