--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,6 @@
 <nav role="navigation">
   <ul>
     <li><a href="/" {% if page.url == "/" %}class="active"{% endif %}>My Projects</a></li>
-    <li><a href="/about" {% if page.url == "/about" %}class="active"{% endif %}>About Me</a></li>
+    <li><a href="/about" {% if page.url == "/about/" %}class="active"{% endif %}>About Me</a></li>
   </ul>
 </nav>
