--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -1,4 +1,6 @@
 body {
+  background-color: black;
+  color: white;
   font-size: 1rem;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
