--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -1,5 +1,5 @@
 body {
-  background: lavender;
+  background: #F3F6FE;
   font-size: 1rem;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
